[gd_scene load_steps=38 format=3 uid="uid://xopw8jd5wmyh"]

[ext_resource type="Environment" uid="uid://1vi1iwjunjii" path="res://source/resources/world_environments/soft_bloom_environment.tres" id="1_5snjs"]
[ext_resource type="Script" path="res://source/scripts/core/controls/timescale_control.gd" id="1_oi6un"]
[ext_resource type="Script" path="res://source/scripts/core/input_controls/world_input_controls.gd" id="1_q07sc"]
[ext_resource type="Script" path="res://source/scripts/core/input_controls/movement_input_control.gd" id="1_wt2mp"]
[ext_resource type="PackedScene" uid="uid://0jdkvta3mhj2" path="res://source/nodes/cameras/camera_parent.tscn" id="2_mirwc"]
[ext_resource type="Script" path="res://source/scripts/core/input_controls/action_input_control.gd" id="3_7k0u2"]
[ext_resource type="PackedScene" uid="uid://c27rxdc1x1gyk" path="res://source/nodes/characters/player_character.tscn" id="3_hn0y1"]
[ext_resource type="Texture2D" uid="uid://455ct5vrafwj" path="res://assets/images/controls/pc/letter-e.png" id="3_rkosi"]
[ext_resource type="Script" path="res://source/scripts/core/controls/items_control.gd" id="4_3h8rf"]
[ext_resource type="Script" path="res://source/scripts/core/items_spawner.gd" id="5_mjlji"]
[ext_resource type="Script" path="res://source/scripts/core/input_controls/menu_input_controls.gd" id="5_pt1r3"]
[ext_resource type="Script" path="res://source/scripts/core/placeholder_spawner.gd" id="6_3whec"]
[ext_resource type="PackedScene" uid="uid://njhe7o7dwos3" path="res://source/nodes/items/red_apple.tscn" id="7_x77bn"]
[ext_resource type="PackedScene" uid="uid://davyj20pyaxy" path="res://source/nodes/items/banana.tscn" id="8_bccfd"]
[ext_resource type="Script" path="res://source/scripts/core/ui/screen_space_label.gd" id="8_boyn3"]
[ext_resource type="PackedScene" uid="uid://g18t51xl8iap" path="res://source/nodes/test/watermelon.tscn" id="8_v03aw"]
[ext_resource type="PackedScene" uid="uid://5a4inoa2y1wx" path="res://source/nodes/items/daikon.tscn" id="9_ic6kt"]
[ext_resource type="PackedScene" uid="uid://cyd4s2ovh8yyi" path="res://source/nodes/items/meat_slice.tscn" id="10_e6ty1"]
[ext_resource type="Script" path="res://source/scripts/core/ui/world_ui.gd" id="11_ehqoi"]
[ext_resource type="Script" path="res://source/scripts/core/ui/inventory_ui.gd" id="16_y837w"]
[ext_resource type="PackedScene" uid="uid://comkfbdci1gu1" path="res://source/nodes/ui/inventory/inventory_slot.tscn" id="17_55esj"]
[ext_resource type="PackedScene" uid="uid://c2j8p0ouei0bv" path="res://source/nodes/ui/quests/quest.tscn" id="18_qmr78"]
[ext_resource type="Script" path="res://source/scripts/quests/quests_ui.gd" id="18_uq56c"]
[ext_resource type="PackedScene" uid="uid://b82kd2vni3b1k" path="res://source/nodes/ui/quick_menu.tscn" id="19_jno4m"]
[ext_resource type="Texture2D" uid="uid://d1eqvudut08av" path="res://assets/images/ui/inventory/tabs_background.png" id="19_lpnyf"]
[ext_resource type="Script" path="res://source/scripts/core/ui/pause_ui.gd" id="19_v5ubj"]
[ext_resource type="Script" path="res://source/scripts/core/ui/quick_menu_ui_inventory.gd" id="20_cqd5j"]
[ext_resource type="Texture2D" uid="uid://c6hbcobm53wc5" path="res://assets/images/ui/inventory/tabs_input_L.png" id="20_i3rjr"]
[ext_resource type="Texture2D" uid="uid://dib43qo3hwu5o" path="res://assets/images/controls/pc/down-arrow.png" id="21_56o6i"]
[ext_resource type="Texture2D" uid="uid://ufp5um5a01o6" path="res://assets/images/ui/inventory/tabs_input_R.png" id="21_xpflm"]
[ext_resource type="Texture2D" uid="uid://bbnrf4ati72ty" path="res://assets/images/controls/pc/left-arrow.png" id="22_xglxu"]
[ext_resource type="Texture2D" uid="uid://c65l21x17vlpv" path="res://assets/images/controls/pc/enter.png" id="23_n0kci"]
[ext_resource type="Texture2D" uid="uid://vmmvtyj6sb1h" path="res://assets/images/controls/pc/escape.png" id="24_h1pgu"]
[ext_resource type="Texture2D" uid="uid://o72d82hj6af3" path="res://assets/images/ui/inventory/description_rect.png" id="25_3blg7"]
[ext_resource type="Texture2D" uid="uid://d3jqrfg6828m2" path="res://assets/images/ui/inventory/character_preview_placeholder.png" id="26_5gkvt"]

[sub_resource type="BoxShape3D" id="BoxShape3D_68xw7"]
size = Vector3(50, 0.2, 50)

[sub_resource type="PlaneMesh" id="PlaneMesh_36eb0"]
size = Vector2(50, 50)

[node name="TestSceneBase" type="Node3D"]

[node name="TimescaleControl" type="Node" parent="."]
process_mode = 3
script = ExtResource("1_oi6un")

[node name="CameraParent" parent="." instance=ExtResource("2_mirwc")]

[node name="PlayerCharacter" parent="." instance=ExtResource("3_hn0y1")]
transform = Transform3D(-0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, -0.5, 0, 1, 0)
_camera_player_path = NodePath("../CameraParent")
_inventory_size = 20

[node name="Spawners" type="Node" parent="."]

[node name="PlaceholderSpawner" type="Node" parent="Spawners"]
script = ExtResource("6_3whec")
_placeholders_parent_path = NodePath("Placeholders")
_placeholders_spawned_parent_path = NodePath("Spawned")

[node name="Placeholders" type="Node" parent="Spawners/PlaceholderSpawner"]

[node name="Spawned" type="Node" parent="Spawners/PlaceholderSpawner"]

[node name="ItemsSpawner" type="Node" parent="Spawners"]
script = ExtResource("5_mjlji")
_pool_size = 2
_items_packed_scenes = Array[PackedScene]([ExtResource("8_v03aw"), ExtResource("7_x77bn"), ExtResource("8_bccfd"), ExtResource("9_ic6kt"), ExtResource("10_e6ty1")])

[node name="GameControls" type="Node" parent="."]

[node name="ItemsControl" type="Node" parent="GameControls"]
script = ExtResource("4_3h8rf")
_item_spawner_path = NodePath("../../Spawners/ItemsSpawner")
_placeholder_spawner_path = NodePath("../../Spawners/PlaceholderSpawner")
_chars_with_bags_node_paths = Array[NodePath]([NodePath("../../PlayerCharacter")])

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("1_5snjs")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldEnvironment"]
transform = Transform3D(0.5, 0.433013, -0.75, 0, 0.866025, 0.5, 0.866025, -0.25, 0.433013, 0, 30, 0)
directional_shadow_mode = 1

[node name="WorldUI" type="CanvasLayer" parent="."]
script = ExtResource("11_ehqoi")
_player_character_node_path = NodePath("../PlayerCharacter")

[node name="ScreenSpaceLabel" type="Control" parent="WorldUI"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("8_boyn3")
_player_camera_path = NodePath("../../CameraParent/CameraPlayer")
_label_path = NodePath("Label")

[node name="Label" type="Label" parent="WorldUI/ScreenSpaceLabel"]
visible = false
layout_mode = 1
anchors_preset = -1
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "Label"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="WorldUI/ScreenSpaceLabel/Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_right = 5.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.196078, 0.196078, 0.196078, 0.705882)

[node name="PickUpActionGraphic" type="HBoxContainer" parent="WorldUI"]
visible = false
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -68.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10
alignment = 1

[node name="ButtonGraphic" type="TextureRect" parent="WorldUI/PickUpActionGraphic"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_rkosi")
expand_mode = 1

[node name="DescriptionLabel" type="Label" parent="WorldUI/PickUpActionGraphic"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Pick up"

[node name="OpenInventory" type="HBoxContainer" parent="WorldUI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 105.0
offset_bottom = 45.0
theme_override_constants/separation = 10
alignment = 1

[node name="ButtonGraphic" type="TextureRect" parent="WorldUI/OpenInventory"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("24_h1pgu")
expand_mode = 1

[node name="DescriptionLabel" type="Label" parent="WorldUI/OpenInventory"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Inventory"

[node name="QuestsScrollBox" type="ScrollContainer" parent="WorldUI"]
offset_left = 20.0
offset_top = 70.0
offset_right = 220.0
offset_bottom = 270.0
script = ExtResource("18_uq56c")
_quest_packed_scene = ExtResource("18_qmr78")

[node name="List" type="VBoxContainer" parent="WorldUI/QuestsScrollBox"]
layout_mode = 2

[node name="PauseUI" type="CanvasLayer" parent="."]
process_mode = 2
layer = 2
script = ExtResource("19_v5ubj")
_player_character_node_path = NodePath("../PlayerCharacter")

[node name="InventoryUI" type="ColorRect" parent="PauseUI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.196078, 0.196078, 0.196078, 0.705882)
script = ExtResource("16_y837w")

[node name="TabsRect" type="TextureRect" parent="PauseUI/InventoryUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -870.0
offset_top = -385.0
offset_right = -70.0
offset_bottom = -295.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("19_lpnyf")

[node name="TabsContainer" type="HBoxContainer" parent="PauseUI/InventoryUI/TabsRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 90.0
offset_top = 15.0
offset_right = -90.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60
alignment = 1

[node name="TabResources" type="VBoxContainer" parent="PauseUI/InventoryUI/TabsRect/TabsContainer"]
custom_minimum_size = Vector2(200, 75)
layout_mode = 2
theme_override_constants/separation = 15
alignment = 2

[node name="Label" type="Label" parent="PauseUI/InventoryUI/TabsRect/TabsContainer/TabResources"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Resources"
horizontal_alignment = 1

[node name="Selection" type="ColorRect" parent="PauseUI/InventoryUI/TabsRect/TabsContainer/TabResources"]
custom_minimum_size = Vector2(200, 4)
layout_mode = 2
size_flags_vertical = 8
color = Color(0.94902, 0.941176, 0.921569, 1)

[node name="TabEquipment" type="VBoxContainer" parent="PauseUI/InventoryUI/TabsRect/TabsContainer"]
custom_minimum_size = Vector2(200, 75)
layout_mode = 2
theme_override_constants/separation = 15
alignment = 2

[node name="Label" type="Label" parent="PauseUI/InventoryUI/TabsRect/TabsContainer/TabEquipment"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Equipment"
horizontal_alignment = 1

[node name="Selection" type="ColorRect" parent="PauseUI/InventoryUI/TabsRect/TabsContainer/TabEquipment"]
custom_minimum_size = Vector2(200, 4)
layout_mode = 2
size_flags_vertical = 8
color = Color(0.94902, 0.941176, 0.921569, 0)

[node name="InputL" type="TextureRect" parent="PauseUI/InventoryUI/TabsRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = -20.0
offset_right = 55.0
offset_bottom = 20.0
grow_vertical = 2
texture = ExtResource("20_i3rjr")

[node name="InputR" type="TextureRect" parent="PauseUI/InventoryUI/TabsRect"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -30.0
offset_right = -15.0
offset_bottom = 30.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("21_xpflm")

[node name="ResourcesSlotsContainer" type="GridContainer" parent="PauseUI/InventoryUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -870.0
offset_top = -220.0
offset_right = -70.0
offset_bottom = 410.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50
columns = 5

[node name="InventorySlot" parent="PauseUI/InventoryUI/ResourcesSlotsContainer" instance=ExtResource("17_55esj")]
layout_mode = 2
focus_neighbor_right = NodePath("../InventorySlot2")
focus_neighbor_bottom = NodePath("../InventorySlot6")

[node name="InventorySlot2" parent="PauseUI/InventoryUI/ResourcesSlotsContainer" instance=ExtResource("17_55esj")]
layout_mode = 2
focus_neighbor_left = NodePath("../InventorySlot")
focus_neighbor_right = NodePath("../InventorySlot3")
focus_neighbor_bottom = NodePath("../InventorySlot7")

[node name="InventorySlot3" parent="PauseUI/InventoryUI/ResourcesSlotsContainer" instance=ExtResource("17_55esj")]
layout_mode = 2
focus_neighbor_left = NodePath("../InventorySlot2")
focus_neighbor_right = NodePath("../InventorySlot4")
focus_neighbor_bottom = NodePath("../InventorySlot7")

[node name="InventorySlot4" parent="PauseUI/InventoryUI/ResourcesSlotsContainer" instance=ExtResource("17_55esj")]
layout_mode = 2
focus_neighbor_left = NodePath("../InventorySlot3")
focus_neighbor_bottom = NodePath("../InventorySlot8")

[node name="InventorySlot5" parent="PauseUI/InventoryUI/ResourcesSlotsContainer" instance=ExtResource("17_55esj")]
layout_mode = 2
focus_neighbor_top = NodePath("../InventorySlot")
focus_neighbor_right = NodePath("../InventorySlot6")

[node name="InventorySlot6" parent="PauseUI/InventoryUI/ResourcesSlotsContainer" instance=ExtResource("17_55esj")]
layout_mode = 2
focus_neighbor_left = NodePath("../InventorySlot5")
focus_neighbor_top = NodePath("../InventorySlot2")
focus_neighbor_right = NodePath("../InventorySlot7")

[node name="InventorySlot7" parent="PauseUI/InventoryUI/ResourcesSlotsContainer" instance=ExtResource("17_55esj")]
layout_mode = 2
focus_neighbor_left = NodePath("../InventorySlot6")
focus_neighbor_top = NodePath("../InventorySlot3")
focus_neighbor_right = NodePath("../InventorySlot8")

[node name="InventorySlot8" parent="PauseUI/InventoryUI/ResourcesSlotsContainer" instance=ExtResource("17_55esj")]
layout_mode = 2
focus_neighbor_left = NodePath("../InventorySlot7")
focus_neighbor_top = NodePath("../InventorySlot4")

[node name="InventorySlot9" parent="PauseUI/InventoryUI/ResourcesSlotsContainer" instance=ExtResource("17_55esj")]
layout_mode = 2
focus_neighbor_left = NodePath("../InventorySlot7")
focus_neighbor_top = NodePath("../InventorySlot4")

[node name="InventorySlot10" parent="PauseUI/InventoryUI/ResourcesSlotsContainer" instance=ExtResource("17_55esj")]
layout_mode = 2
focus_neighbor_left = NodePath("../InventorySlot7")
focus_neighbor_top = NodePath("../InventorySlot4")

[node name="InventorySlot11" parent="PauseUI/InventoryUI/ResourcesSlotsContainer" instance=ExtResource("17_55esj")]
layout_mode = 2
focus_neighbor_left = NodePath("../InventorySlot7")
focus_neighbor_top = NodePath("../InventorySlot4")

[node name="InventorySlot12" parent="PauseUI/InventoryUI/ResourcesSlotsContainer" instance=ExtResource("17_55esj")]
layout_mode = 2
focus_neighbor_left = NodePath("../InventorySlot7")
focus_neighbor_top = NodePath("../InventorySlot4")

[node name="InventorySlot13" parent="PauseUI/InventoryUI/ResourcesSlotsContainer" instance=ExtResource("17_55esj")]
layout_mode = 2
focus_neighbor_left = NodePath("../InventorySlot7")
focus_neighbor_top = NodePath("../InventorySlot4")

[node name="InventorySlot14" parent="PauseUI/InventoryUI/ResourcesSlotsContainer" instance=ExtResource("17_55esj")]
layout_mode = 2
focus_neighbor_left = NodePath("../InventorySlot7")
focus_neighbor_top = NodePath("../InventorySlot4")

[node name="InventorySlot15" parent="PauseUI/InventoryUI/ResourcesSlotsContainer" instance=ExtResource("17_55esj")]
layout_mode = 2
focus_neighbor_left = NodePath("../InventorySlot7")
focus_neighbor_top = NodePath("../InventorySlot4")

[node name="InventorySlot16" parent="PauseUI/InventoryUI/ResourcesSlotsContainer" instance=ExtResource("17_55esj")]
layout_mode = 2
focus_neighbor_left = NodePath("../InventorySlot7")
focus_neighbor_top = NodePath("../InventorySlot4")

[node name="InventorySlot17" parent="PauseUI/InventoryUI/ResourcesSlotsContainer" instance=ExtResource("17_55esj")]
layout_mode = 2
focus_neighbor_left = NodePath("../InventorySlot7")
focus_neighbor_top = NodePath("../InventorySlot4")

[node name="InventorySlot18" parent="PauseUI/InventoryUI/ResourcesSlotsContainer" instance=ExtResource("17_55esj")]
layout_mode = 2
focus_neighbor_left = NodePath("../InventorySlot7")
focus_neighbor_top = NodePath("../InventorySlot4")

[node name="InventorySlot19" parent="PauseUI/InventoryUI/ResourcesSlotsContainer" instance=ExtResource("17_55esj")]
layout_mode = 2
focus_neighbor_left = NodePath("../InventorySlot7")
focus_neighbor_top = NodePath("../InventorySlot4")

[node name="InventorySlot20" parent="PauseUI/InventoryUI/ResourcesSlotsContainer" instance=ExtResource("17_55esj")]
layout_mode = 2
focus_neighbor_left = NodePath("../InventorySlot7")
focus_neighbor_top = NodePath("../InventorySlot4")

[node name="CharacterPreview" type="TextureRect" parent="PauseUI/InventoryUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 190.0
offset_top = -340.0
offset_right = 830.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("26_5gkvt")
expand_mode = 1

[node name="DescriptionRect" type="TextureRect" parent="PauseUI/InventoryUI"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -890.0
offset_top = 120.0
offset_bottom = 410.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("25_3blg7")

[node name="Name" type="Label" parent="PauseUI/InventoryUI/DescriptionRect"]
layout_mode = 0
offset_left = 40.0
offset_top = -30.0
offset_right = 124.0
offset_bottom = 28.0
theme_override_font_sizes/font_size = 40
text = "Title"

[node name="Description" type="Label" parent="PauseUI/InventoryUI/DescriptionRect"]
custom_minimum_size = Vector2(730, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -15.0
offset_right = 260.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Feugiat scelerisque varius morbi enim nunc faucibus a. Cras ornare arcu dui vivamus arcu felis bibendum. Euismod lacinia at quis risus sed vulputate."
vertical_alignment = 1
autowrap_mode = 2

[node name="QuickMenu" parent="PauseUI/InventoryUI" instance=ExtResource("19_jno4m")]
visible = false
layout_mode = 0
script = ExtResource("20_cqd5j")

[node name="ControlWithOffset" parent="PauseUI/InventoryUI/QuickMenu" index="0"]
offset_left = 120.0
offset_right = 270.0
offset_bottom = 170.0

[node name="HoldMoreButton" type="Button" parent="PauseUI/InventoryUI/QuickMenu/ControlWithOffset/ButtonsContainer" index="0"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_bottom = NodePath("../HoldLessButton")
text = "Hold more"

[node name="HoldLessButton" type="Button" parent="PauseUI/InventoryUI/QuickMenu/ControlWithOffset/ButtonsContainer" index="1"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../HoldMoreButton")
focus_neighbor_bottom = NodePath("../DropButton")
disabled = true
text = "Hold less"

[node name="DropButton" type="Button" parent="PauseUI/InventoryUI/QuickMenu/ControlWithOffset/ButtonsContainer" index="2"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../HoldLessButton")
focus_neighbor_bottom = NodePath("../CancelButton")
disabled = true
text = "Drop"

[node name="CancelButton" type="Button" parent="PauseUI/InventoryUI/QuickMenu/ControlWithOffset/ButtonsContainer" index="3"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../DropButton")
text = "Cancel"

[node name="CountRect" type="ColorRect" parent="PauseUI/InventoryUI/QuickMenu/ControlWithOffset" index="2"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 4.0
offset_top = 32.0
offset_right = 44.0
offset_bottom = 72.0
grow_horizontal = 0
color = Color(0.196078, 0.196078, 0.196078, 0.705882)

[node name="Highlight" type="ColorRect" parent="PauseUI/InventoryUI/QuickMenu/ControlWithOffset/CountRect"]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="CountHBox" type="HBoxContainer" parent="PauseUI/InventoryUI/QuickMenu/ControlWithOffset/CountRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 1
alignment = 1

[node name="Label" type="Label" parent="PauseUI/InventoryUI/QuickMenu/ControlWithOffset/CountRect/CountHBox"]
layout_mode = 2
text = "x"

[node name="CountLabel" type="Label" parent="PauseUI/InventoryUI/QuickMenu/ControlWithOffset/CountRect/CountHBox"]
layout_mode = 2
text = "0"

[node name="Header" type="ColorRect" parent="PauseUI/InventoryUI"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2
color = Color(0.207843, 0.219608, 0.223529, 0.8)

[node name="Footer" type="ColorRect" parent="PauseUI/InventoryUI"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.207843, 0.219608, 0.223529, 0.6)

[node name="HelperControls" type="HBoxContainer" parent="PauseUI/InventoryUI"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0
offset_right = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 50
alignment = 2

[node name="MoveSelection" type="HBoxContainer" parent="PauseUI/InventoryUI/HelperControls"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ButtonLabels" type="VBoxContainer" parent="PauseUI/InventoryUI/HelperControls/MoveSelection"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="PauseUI/InventoryUI/HelperControls/MoveSelection/ButtonLabels"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("21_56o6i")
expand_mode = 1
stretch_mode = 5
flip_v = true

[node name="HBoxContainer" type="HBoxContainer" parent="PauseUI/InventoryUI/HelperControls/MoveSelection/ButtonLabels"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PauseUI/InventoryUI/HelperControls/MoveSelection/ButtonLabels/HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("22_xglxu")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="PauseUI/InventoryUI/HelperControls/MoveSelection/ButtonLabels/HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("21_56o6i")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="PauseUI/InventoryUI/HelperControls/MoveSelection/ButtonLabels/HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("22_xglxu")
expand_mode = 1
flip_h = true

[node name="Label" type="Label" parent="PauseUI/InventoryUI/HelperControls/MoveSelection"]
layout_mode = 2
text = "Move selection"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Select" type="HBoxContainer" parent="PauseUI/InventoryUI/HelperControls"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PauseUI/InventoryUI/HelperControls/Select"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PauseUI/InventoryUI/HelperControls/Select/HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("3_rkosi")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="PauseUI/InventoryUI/HelperControls/Select/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "/"

[node name="TextureRect2" type="TextureRect" parent="PauseUI/InventoryUI/HelperControls/Select/HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("23_n0kci")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="PauseUI/InventoryUI/HelperControls/Select"]
layout_mode = 2
text = "Select"

[node name="Back" type="HBoxContainer" parent="PauseUI/InventoryUI/HelperControls"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PauseUI/InventoryUI/HelperControls/Back"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PauseUI/InventoryUI/HelperControls/Back/HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("24_h1pgu")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="PauseUI/InventoryUI/HelperControls/Back"]
layout_mode = 2
text = "Back"

[node name="WorldInputControls" type="Node" parent="."]
process_mode = 1
script = ExtResource("1_q07sc")
_timescale_control_path = NodePath("../TimescaleControl")
_player_character_node_path = NodePath("../PlayerCharacter")
_world_ui_path = NodePath("../WorldUI")

[node name="MovementInputControl" type="Node" parent="WorldInputControls"]
script = ExtResource("1_wt2mp")

[node name="ActionInputControl" type="Node" parent="WorldInputControls"]
script = ExtResource("3_7k0u2")

[node name="MenuInputControls" type="Node" parent="."]
process_mode = 2
script = ExtResource("5_pt1r3")
_timescale_control_path = NodePath("../TimescaleControl")
_player_character_node_path = NodePath("../PlayerCharacter")
_pause_ui_path = NodePath("../PauseUI")

[node name="ActionInputControl" type="Node" parent="MenuInputControls"]
script = ExtResource("3_7k0u2")

[node name="Floor" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
shape = SubResource("BoxShape3D_68xw7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
mesh = SubResource("PlaneMesh_36eb0")

[node name="DebugUI" type="CanvasLayer" parent="."]

[node name="Version" type="Label" parent="DebugUI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -53.0
offset_top = -26.0
grow_horizontal = 0
grow_vertical = 0
text = "ver-0.1"

[editable path="PauseUI/InventoryUI/QuickMenu"]
